--- a/requirements/backend.in
+++ b/requirements/backend.in
@@ -1,5 +1,5 @@
-fastapi
-pydantic>=2.0
-pydantic-settings
-starlette
-uvicorn[standard]
+fastapi==0.110.0
+pydantic==0.10.14
+pydantic-settings==2.3.2
+starlette==0.36.3
+uvicorn==0.29.0
